--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,4 @@
-$color-primary: #3046C5;
-$color-secondary: #5637dd;
-$color-pale: #CEC8FF;
-$color-mid: #901CAD;
-$color-dark: #60106b;
-$color-black-transparent: rgba(0, 0, 0, 0.5);
-
-$body-font: "Open Sans", sans-serif;
-$header-font: "Lobster", cursive
+.main-row {
+    max-width: 100%;
+    padding: 0;
+}
