--- a/css/main.scss
+++ b/css/main.scss
@@ -32,12 +32,17 @@ button:focus {
 #navlogo {
     display: block;
     text-indent: -9999px;
-    height: 128px;
-    width: 255px;
-    margin-bottom: -3rem;
+    height: 1.25*128px;
+    width: 1.25*255px;
+    margin-bottom: -4rem;
     background-image: url(../img/logo.svg);
-    background-size: 255px 128px;
+    background-size: 1.25*255px 1.25*128px;
 }
+
+#navlogomobile {
+    display: none;
+}
+
 .search {
     background-color: black;
     color: white;
@@ -54,7 +59,7 @@ button:focus {
     border-radius: 10px;
 }
 
-.main-row {
+.main-row {   
   max-width: 100%;
   padding: 0 0 0 1rem;
   margin: 0 -1rem;
@@ -95,10 +100,6 @@ button:focus {
     display: none;
 }
 
-.card {
-    width: 12rem;
-}
-
 .reviews-row {
     border-top: 4px solid black;
     margin-left: 0rem;
@@ -117,6 +118,15 @@ iframe {
     list-style-type: none;
 }
 
+.card {
+    // width: 12rem;
+    margin: 1rem 2rem;
+}
+
+.card-img-top {
+    max-width: 12rem;
+}
+
 .cardbtn {
     padding: .25rem;
     border: none;
@@ -132,21 +142,68 @@ iframe {
     color: white;
 }
 
+@media only screen and (max-width: 1130px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
 @media only screen and (max-width: 980px) {
+    #navlogo {
+        display: block;
+        text-indent: -9999px;
+        height: 128px;
+        width: 255px;
+        margin-bottom: -3rem;
+        background-image: url(../img/logo.svg);
+        background-size: 255px 128px;
+    }
+    
     .card {
-        width: 10rem;
+        // width: 10rem;
+        margin: 1rem 1rem;
     }
   }
 
 
  @media only screen and (max-width: 767px) {
+     
      h4 {
          font-size: 1rem;
      }
+
+     #navlogo {
+        display: block;
+        text-indent: -9999px;
+        height: .7*128px;
+        width: .7*255px;
+        margin-bottom: -3rem;
+        background-image: url(../img/logo.svg);
+        background-size: .7*255px .7*128px;
+    }
+
     .card {
-        width: 8rem;
+        // width: 8rem;
+        margin: .5rem;
     }
     .carousel-div {
         padding: 0 0 0 1rem;
     }
   }
+  @media only screen and (max-width: 560px) {
+      #navlogo {
+          display: none;
+      }
+      #navlogomobile {
+          display: block;
+          height: .7*128px;
+          width: .7*255px;    
+          background-image: url(../img/logo.svg);
+          background-size: .7*255px .7*128px;
+          position: fixed;
+          top: 0;
+          left: 30%;
+          z-index: 1000;
+          margin-top: .5rem;
+      }
+  }      
