--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,10 @@ button:focus {
     border-radius: 10px;
 }
 
+.searchfield:focus {
+    outline: none;
+}
+
 .main-row {   
   max-width: 100%;
   padding: 0 0 0 1rem;
@@ -75,7 +79,7 @@ button:focus {
      border: 2px dashed black;
      border-top: 0;
      padding: 3rem;
-     height: 55%;
+     height: 60%;
  }
 
  .join {
@@ -88,16 +92,17 @@ button:focus {
 
 .social {
     background-color: black;
-    height: 5%;
+    height: 40%;
+    width: 65px;
     margin: 0;
-    padding: .4rem;
+    padding: .5rem 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
  
 .btn-social-icon {
-    margin: auto 1rem;
-}
-.btn-check {
-    display: none;
+    margin: .5rem 1rem;
 }
 
 .reviews-row {
@@ -146,22 +151,38 @@ iframe {
     h1 {
         font-size: 2rem;
     }
+
+    .btn-social-icon {
+        margin: .25rem;
+    }
 }
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-width: 991px) {
     #navlogo {
         display: block;
         text-indent: -9999px;
-        height: 128px;
-        width: 255px;
+        height: .85*128px;
+        width: .85*255px;
         margin-bottom: -3rem;
         background-image: url(../img/logo.svg);
-        background-size: 255px 128px;
+        background-size: .85*255px .85*128px;
     }
     
     .card {
         // width: 10rem;
         margin: 1rem 1rem;
+    }
+    .join {
+        height: 300px;
+    }
+    .social {
+        padding: 0 1rem;
+        width: 100%;
+        height: 65px;
+        top: 0;
+    }
+    .btn-social-icon {
+        margin: 1rem .5rem;
     }
   }
 
@@ -173,13 +194,19 @@ iframe {
      }
 
      #navlogo {
+        display: none;
+    }
+    #navlogomobile {
         display: block;
-        text-indent: -9999px;
-        height: .7*128px;
-        width: .7*255px;
-        margin-bottom: -3rem;
+        height: .8*128px;
+        width: .8*255px;    
         background-image: url(../img/logo.svg);
-        background-size: .7*255px .7*128px;
+        background-size: .8*255px .8*128px;
+        position: fixed;
+        top: 0;
+        left: 35%;
+        z-index: 1000;
+        margin-top: .5rem;
     }
 
     .card {
@@ -190,20 +217,10 @@ iframe {
         padding: 0 0 0 1rem;
     }
   }
-  @media only screen and (max-width: 560px) {
-      #navlogo {
-          display: none;
-      }
-      #navlogomobile {
-          display: block;
-          height: .7*128px;
-          width: .7*255px;    
-          background-image: url(../img/logo.svg);
-          background-size: .7*255px .7*128px;
-          position: fixed;
-          top: 0;
-          left: 30%;
-          z-index: 1000;
-          margin-top: .5rem;
-      }
+  @media only screen and (max-width: 575px) {
+    #navlogomobile {
+        height: .7*128px;
+        width: .7*255px;    
+        background-size: .7*255px .7*128px;
+    }
   }      
