--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,25 @@
 
 
 h1 {
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Carter One', sans-serif;
     font-weight: 700;
+}
+
+h2 {
+    font-family: 'Carter One', sans-serif;
 }
 
 button:focus {
     outline: none;
+}
+
+a {
+    color: inherit;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: none;
 }
 
 .navbar {
@@ -78,15 +91,25 @@ button:focus {
      margin: 0;
      border: 2px dashed black;
      border-top: 0;
-     padding: 3rem;
+     padding: 1.5rem;
      height: 60%;
+     transition: 700ms;
+ }
+
+ .customizer:hover {
+     background-color: orange;
+ }
+
+ #custombannerimg {
+     border: solid black;
+     border-radius: 3px;
  }
 
  .join {
     background-color: #212172;
     color: white;
     margin: 0;
-    padding: 3rem;
+    padding: 1rem;
     height: 40%;
 }
 
@@ -113,11 +136,23 @@ button:focus {
 }
 
 iframe {
+    height: 500px;
     border: none;
     width: 100%;
 }
 
 //custom
+.customizer-tally {
+    background-color: #FFEFAE;
+    margin: 0;
+    border: 2px dashed black;
+    border-top: 0;
+    padding: 1.5rem;
+    height: 60%;
+    position: fixed;
+    max-width: 500px;
+    right: 0;
+}
 
 .baselist, .spicelist, .fruitlist, .florallist {
     list-style-type: none;
@@ -147,13 +182,33 @@ iframe {
     color: white;
 }
 
+@media only screen and (max-width: 1429px) {
+    .customtitle {
+        font-size: 1.75rem;
+    }
+} 
+
+@media only screen and (max-width: 1274px) {
+    .customtitle {
+        font-size: 1.35rem;
+    }
+}
+
 @media only screen and (max-width: 1130px) {
-    h1 {
-        font-size: 2rem;
+    .customtitle {
+        font-size: 1.3rem;
     }
 
     .btn-social-icon {
         margin: .25rem;
+    }
+
+    .card-img-top {
+        width: 10rem
+    }
+
+    h4 {
+        font-size: 1.3rem;
     }
 }
 
@@ -167,25 +222,42 @@ iframe {
         background-image: url(../img/logo.svg);
         background-size: .85*255px .85*128px;
     }
+
+    .customizer-tally {
+        position: relative;
+        max-width: none;
+    }
     
-    .card {
-        // width: 10rem;
-        margin: 1rem 1rem;
+    .customizer {
+        margin-left: 1rem;
+        height: 600px;
     }
+
+    .customtitle {
+        font-size: 2rem;
+        margin-top: 3rem;
+    }
+
     .join {
-        height: 300px;
+        height: 100px;
     }
+
     .social {
-        padding: 0 1rem;
+        padding: 0 .8rem;
         width: 100%;
         height: 65px;
         top: 0;
     }
+
     .btn-social-icon {
         margin: 1rem .5rem;
     }
-  }
 
+    .card {
+        // width: 10rem;
+        margin: 1rem 1rem;
+    }
+  } 
 
  @media only screen and (max-width: 767px) {
      
@@ -204,7 +276,7 @@ iframe {
         background-size: .8*255px .8*128px;
         position: fixed;
         top: 0;
-        left: 35%;
+        left: 37%;
         z-index: 1000;
         margin-top: .5rem;
     }
@@ -222,5 +294,6 @@ iframe {
         height: .7*128px;
         width: .7*255px;    
         background-size: .7*255px .7*128px;
+        left: 35%;
     }
   }      
