--- a/css/main.css
+++ b/css/main.css
@@ -116,8 +116,9 @@ nav .navbar-nav li a {
   background-color: #212172;
   color: white;
   margin: 0;
-  padding: 1rem;
-  height: 40%; }
+  padding-left: 1.25rem;
+  height: 40%;
+  align-items: center; }
 
 .join-text {
   font-size: 2.5rem; }
@@ -131,7 +132,7 @@ nav .navbar-nav li a {
   width: 235px;
   transition: 500ms;
   font-size: 1.25rem;
-  margin-left: 10%; }
+  margin-left: 20%; }
 
 .sign-up:hover {
   background-color: orange; }
@@ -263,7 +264,7 @@ iframe {
     margin-top: 4rem; }
   .join {
     height: 100px;
-    padding-left: 3rem;
+    padding-left: 5.5rem;
     align-items: center; }
   .social {
     padding: 0 .8rem;
