--- a/css/main.scss
+++ b/css/main.scss
@@ -144,8 +144,9 @@ nav .navbar-nav li a{
     background-color: #212172;
     color: white;
     margin: 0;
-    padding: 1rem;
+    padding-left: 1.25rem;
     height: 40%;
+    align-items: center;
 
 }
 
@@ -162,7 +163,7 @@ nav .navbar-nav li a{
     width: 235px;
     transition: 500ms;
     font-size: 1.25rem;
-    margin-left: 10%;
+    margin-left: 20%;
 }
 
 .sign-up:hover {
@@ -335,7 +336,7 @@ iframe {
 
     .join {
         height: 100px;
-        padding-left: 3rem;
+        padding-left: 5.5rem;
         align-items: center;
     }
 
